--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,8 +1,8 @@
 [theme]
 base="light"
-primaryColor="#FF69B4"               # Hot Pink
-backgroundColor="#FFF0F5"            # Soft pink (lavender blush)
-secondaryBackgroundColor="#FFE4E1"   # Misty rose
-textColor="#3A3A3A"                  # Deep gray
+primaryColor="#FF69B4"               
+backgroundColor="#FFF0F5"            
+secondaryBackgroundColor="#FFE4E1"   
+textColor="#3A3A3A"                  
 font="sans serif"
 
